# Meshix

./: .gitignore  .gitmodules  CMakeLists.txt
Meshix/: CMakeLists.txt
Meshix/include/: MainWindow.h
Meshix/include/Controlling/: KeyboardControllerInput.h  MouseControllerInput.h
Meshix/include/Rendering/: RenderContext.h  RenderPipeline.h
Meshix/include/Rendering/Passes/: AmbientOcclusionPass.h  GeometryPass.h  ImGuiPass.h  LightingPass.h  ShadowGeometryPass.h  ShadowPass.h
Meshix/shaders/: chlsl.h  csm.h  csm.hlsli  hbao.hlsli  noise.hlsli  pbr.hlsli  pcss.hlsli  poisson.hlsli  structures.h
Meshix/shaders/passes/: AmbientOcclusionPass.hlsl  CascadeSetupPass.hlsl  DepthReductionPass.hlsl  GeometryPass.hlsl  LightingPass.hlsl  ShadowGeometryPass.hlsl  ShadowPass.hlsl
Meshix/src/: Main.cpp  MainWindow.cpp
Meshix/src/Rendering/: RenderPipeline.cpp
Meshix/src/Rendering/Passes/: AmbientOcclusionPass.cpp  GeometryPass.cpp  ImGuiPass.cpp  LightingPass.cpp  ShadowGeometryPass.cpp  ShadowPass.cpp
